--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,18 @@
+aniso8601==3.0.2
 certifi==2018.1.18
 chardet==3.0.4
 click==6.7
-Flask==0.12.2
+coverage==4.5.1
+Flask==1.0.2
+Flask-RESTful==0.3.6
 gunicorn==19.7.1
 idna==2.6
 itsdangerous==0.24
 Jinja2==2.10
 MarkupSafe==1.0
-peewee==2.10.2
+peewee==3.7.0
+pytz==2018.5
 requests==2.18.4
+six==1.11.0
 urllib3==1.22
 Werkzeug==0.14.1
