--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,18 @@
-aniso8601==3.0.2
-certifi==2018.1.18
+aniso8601==4.0.1
+certifi==2018.11.29
 chardet==3.0.4
-click==6.7
-coverage==4.5.1
+Click==7.0
+coverage==5.0a4
 Flask==1.0.2
-Flask-RESTful==0.3.6
-gunicorn==19.7.1
-idna==2.6
-itsdangerous==0.24
+Flask-RESTful==0.3.7
+gunicorn==19.9.0
+idna==2.8
+itsdangerous==1.1.0
 Jinja2==2.10
-MarkupSafe==1.0
-peewee==3.7.0
-pytz==2018.5
-requests==2.20.0
-six==1.11.0
-urllib3==1.22
+MarkupSafe==1.1.0
+peewee==3.8.0
+pytz==2018.7
+requests==2.21.0
+six==1.12.0
+urllib3==1.24.1
 Werkzeug==0.14.1
